# praxis-agentic-cfo

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  praxis_gui.py  pyproject.toml
audit_store/: README.md
configs/agents/: controller.yaml  planner.yaml  verifier.yaml
configs/datasets/: paper_synthetic_v1.yaml
configs/eval/: paper_thresholds.yaml  thresholds.yaml
configs/experiment/: paper_v1.yaml
configs/human_audit/: rubric.yaml
configs/perturbations/: compound.yaml  single.yaml
configs/run/: evaluation_locked.yaml
data/: README.md
data/latest/: journal_entries.csv  manifest.json  transactions.csv  trial_balance.csv
docs/: ai_tool_use_disclosure.md  appendix_agent_prompts_metrics.md  artifact_manifest.md  artifact_scope.md  data_metric_dictionary.md  gui_plan.md  human_audit_status.md  methodology_alignment.md  metrics_alignment.md  reproducibility.md  running_chapter4_experiments.md
docs/praxis_revisions/: draft_25.08.03.md  draft_25.08.20.md  draft_25.09.03.md  draft_25.09.04.md  draft_25.09.19.md  (+28 more)
human_audit/: README.md
runs/: README.md
scripts/: backdate_commits.sh  generate_chapter4_tables.py  generate_paper_dataset.py  reproduce_review_package.py  run_experiment_matrix.py  run_human_audit_demo.py
tests/: test_agentic_cfo_cli.py  test_agentic_cfo_flow.py  test_experiment_dataset.py  test_llm_integration.py  test_perturbations_and_runner.py  test_phase4_metrics_and_systems.py  test_phases_6_9.py  test_reset.py  test_reviews_and_analytics.py  test_ui_app_smoke.py  test_ui_backend.py  test_ui_jobs_store_settings.py
(+79 files in other folders)
